--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Poland24</title>
 </head>
-<body>
+<body
+  style="overflow-x: hidden"
+>
 <div id="root"></div>
 </body>
 </html>
